# dw-commodities

./: .gitignore  README.md  pyproject.toml
app/: app.py  test.py
dw-dependencies/: pyproject.toml
poetry_env/: pyproject.toml
poetry_env/dbt_dw_commodities/: dbt_project.yml
poetry_env/dbt_dw_commodities/models/example/: schema.yml
poetry_env/dbt_dw_commodities/models/example/datamart/: dm_commodities.sql  schema.yml
poetry_env/dbt_dw_commodities/models/example/staging/: schema.yml  stg_commodities.sql  stg_movimentacao_commodities.sql
poetry_env/dbt_dw_commodities/seeds/: movimentacao_commodities.csv
src/: extract_load.py
