[tool.poetry]
name = "dw-dependencies"
version = "0.1.0"
description = ""
authors = ["mourayago <moura.yagoibmec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
yfinance = "^0.2.52"
dbt-postgres = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
